--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
 	</head>
 	<body>
 		<div class="topleft">
-			<a href="images/fairytale.png"><img src="images/fairytale.PNG"/></a>
+			<a href="images/fairytale.PNG"><img src="images/fairytale.PNG"/></a>
 		</div>
 		<div class="title">
 			"<img src="images/Tempest Title.png"/>
 		</div>
 		<div class="topright">
-			<a href="images/contract.png"><img src="images/contract.png"/></a>
+			<a href="images/contract.PNG"><img src="images/contract.PNG"/></a>
 		</div>
 		<div class="centerleft">
-			<a href="images/ad.png"><img src="images/ad.png"/></a>
+			<a href="images/ad.PNG"><img src="images/ad.PNG"/></a>
 		</div>
 		<div class="center">
-			<a href="shortstory.html"><img src="images/shortstory.png"/></a>
+			<a href="shortstory.html"><img src="images/shortstory.PNG"/></a>
 		</div>
 		<div class="centerright">
-			<a href="images/poem.png"><img src="images/poem.png"/></a>
+			<a href="images/poem.PNG"><img src="images/poem.PNG"/></a>
 		</div>
 
 		<div class="bottom">
-			<a href="images/topfive.png"><img src="images/topfive.png"/></a>
+			<a href="images/topfive.PNG"><img src="images/topfive.PNG"/></a>
 		</div>
 
 </html>
