--- a/shortstory.html
+++ b/shortstory.html
@@ -16,13 +16,13 @@
 	</head>
 	<body>
 		<div class="page">
-			<a href="images/shortstory.png"><img src="images/shortstory.png"/></a>
+			<a href="images/shortstory.PNG"><img src="images/shortstory.PNG"/></a>
 		</div>
 		<div class="page">
-			<a href="images/shortstory2.png"><img src="images/shortstory2.png"/></a>
+			<a href="images/shortstory2.PNG"><img src="images/shortstory2.PNG"/></a>
 		</div>
 		<div class="page" style="height:20%">
-			<a href="images/shortstory3.png"><img src="images/shortstory3.png"/></a>
+			<a href="images/shortstory3.PNG"><img src="images/shortstory3.PNG"/></a>
 		</div>
 		<div class="home">
 			<a href="index.html"><img src="images/Tempest Title.png"/>
